flickering error mostly fixed

--- a/src/app/dashboard/Validation.module.scss
+++ b/src/app/dashboard/Validation.module.scss
@@ -1,11 +1,11 @@
 .stamp {
-  $displace: 50px;
+  $displace: 100px;
   // border: 1px solid white;
   position: absolute;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  right: -$displace * 0.65;
+  right: -$displace * 0.4;
   top: -3px;
   width: $displace;
   height: 30px;
@@ -27,9 +27,9 @@
     position: absolute;
     display: hidden;
     top: 0;
-    right: -$displace * 0.5;
+    right: 0;
 
-    opacity: 0;
+    opacity: 0; //initial hidden
     transition: 200ms all ease-out;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
 
@@ -59,8 +59,8 @@
     opacity: 1;
     .dialog {
       display: block;
-      opacity: 1;
-      right: -40px;
+      opacity: 1; //final visible
+      right: -35px;
     }
   }
 }
